--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -36,7 +36,7 @@
         {% csrf_token %}
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" name="login" required>
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" name="email" required>
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
     
